# snake-cpp

./: .gitattributes  .gitignore  .gitmodules  .open.vim  CMakeLists.txt  LICENSE  README.md  Session.vim  build.sh  main.cpp  main.hpp  makefile  open.sh
.github/workflows/: cd.yaml  ci.yaml
cicd/: README.md  darwin.sh  ubuntu.sh  windows.bat
cicd/cmake/: pack.cmake  test.cmake
data/: help.pad.window
include/: types.hpp
include/core/: core.hpp  getopt.cpp  init.cpp  init.hpp  log.cpp  log.hpp  options.cpp
include/game/: game.cpp  game.hpp
include/snake/: draw.cpp  draw.hpp  input.cpp  input.hpp  logic.cpp  logic.hpp  setup.cpp  setup.hpp  snake.hpp
packaging/: CMakeLists.txt  description.txt  generatorOverrides.cmake  readme.txt
src/: CMakeLists.txt  main.cpp
src/include/: types.hpp
src/include/core/: core.hpp  init.cpp  log.cpp  options.hpp
src/include/game/: game.cpp
src/include/snake/: draw.cpp  draw.hpp  setup.cpp  snake.hpp
src/snake/: CMakeLists.txt
src/snake/include/snake/: core.hpp  draw.hpp  game.hpp  init.hpp  input.hpp  logic.hpp  options.hpp  types.hpp  version.hpp.in
src/snake/src/: draw.cpp  game.cpp  init.cpp  input.cpp  log.cpp  logic.cpp  options.cpp  setup.cpp  whereami.cpp
